# swarm-arena

./: .gitignore  Cargo.toml  DEV_TO_ARTICLE.md  MULTI_AGENT_WALLET_SUPPORT.md  README.md  package-lock.json  package.json
arena-ui/: config-overrides.js  package-lock.json  package.json
arena-ui/public/: index.html
arena-ui/src/: App.css  App.tsx  index.css
arena-ui/src/components/: AgentCard.tsx  ArenaGrid.tsx  Footer.tsx  Header.tsx  LiveFeed.tsx  ScoreChart.tsx  StatsBar.tsx  WalletButton.tsx
arena-ui/src/pages/: AgentDetails.tsx
maps/: dungeon.map  example.map  large.map  test.map  test.schem
programs-arena/: Anchor.toml  package-lock.json
programs-arena/programs/programs-arena/: Cargo.toml
programs-arena/programs/programs-arena/src/: lib.rs
programs-arena/tests/: programs-arena.ts
puzzle #1/: bf_interpreter  bf_interpreter.rs  bf_solver.py  bf_solver_with_data.py
src/: components.rs  events.rs  main.rs  neural_policy.rs  qtable.rs  resources.rs
src/systems/: agent_policy.rs  episode.rs  mod.rs  movement.rs  on_chain.rs  rewards.rs  setup.rs  wallet_manager.rs
