[package]
name = "swarm-arena"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_winit",
    "x11",
] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-client = "1.18"
solana-sdk = "1.18"
anchor-client = "0.30.1"
anchor-lang = "0.30.1"
shellexpand = "2.1"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3