[package]
name = "swarm-arena"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "swarm-arena"
path = "src/main.rs"

[[bin]]
name = "minecraft-converter"
path = "src/bin/minecraft_converter.rs"

[[bin]]
name = "register-agent"
path = "src/bin/register_agent.rs"

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_winit",
    "x11",
] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
solana-client = "1.18"
solana-sdk = "1.18"
anchor-client = "0.30.1"
anchor-lang = "0.30.1"
shellexpand = "2.1"

fastnbt = "2.3"
flate2 = "1.0"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
